# MedScribe

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  audio_rag.py  main.py  pyproject.toml  requirements.txt
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
src/: audio_rag_pipeline.py  medical_ner.py  rag_metrics.py  soap_generator.py  vectorstore.py
stt_whisper/: inference.py
